I think I'm done maybe?

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 
         <div id="queens">
         </div>
+
+        <div id="result">
+            <div id="message"></div>
+            <button onclick="location.reload()">Tentar novamente</button>
+        </div>
     </div>
     
     <script src="./script.js"></script>
